--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,10 +13,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: bootstrap
+      run: ./bootstrap.sh
+    - name: bootstrap
+      run: ./bootstrap.sh
     - name: configure
-      run: ./configure
+      run: configure
     - name: make
-      run: make
+      run: make -j `nproc`
     - name: make check
       run: make check
     - name: make distcheck
