--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -19,6 +19,10 @@ jobs:
       run: ./bootstrap.sh
     - name: configure
       run: ./configure
+    - name: uname
+      run: uname -a
+    - name: env
+      run: cat /etc/os-release
     - name: make
       run: make -j `nproc`
     - name: make check
